compose suggestion wrap issue

--- a/src/app/components/Suggestion/suggestion.css
+++ b/src/app/components/Suggestion/suggestion.css
@@ -6,7 +6,8 @@
 .input {
   display: flex;
   min-height: 48px;
-  border-bottom: 1px solid rgba(50,61,71,.16)
+  border-bottom: 1px solid rgba(50,61,71,.16);
+  flex-wrap: wrap;
 }
 .input span {
   color: black;
@@ -19,8 +20,11 @@
 }
 .input input {
   border: none;
-  height: 48px;
+  height: 128px;
   font-size: 14px;
+  width: 50px;
+  display: flex;
+  flex: 1;
 }
 .input input:focus {
   border: none;
